# Scratchpad

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  README.md  README_ZH.md  index.html  package.json  pnpm-lock.yaml  tauri-key.pem.pub  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: index.html
docs/superpowers/plans/: 2026-04-24-native-tab-controller.md  2026-04-24-theme-token-system.md  2026-04-25-i18n-bilingual.md
docs/superpowers/specs/: 2026-04-23-theme-token-system-design.md  2026-04-24-native-tab-controller-design.md  2026-04-25-i18n-bilingual-design.md
src/: App.svelte  MinimizedApp.svelte  app-shell-style.test.ts  app.css  main.js  main.js.map  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/models/: entry.rs  mod.rs  preferences.rs  scratchpad.rs
src-tauri/src/scratchpad/: assets.rs  clipboard.rs  mod.rs  preferences.rs  storage.rs
src-tauri/src/storage/: connection.rs  error.rs  migration.rs  mod.rs
src-tauri/src/system/: fonts.rs  mod.rs  tab_controller.rs  window.rs
src/lib/api/: dock.test.ts  dock.ts
src/lib/components/: EntryCard.svelte  MinimizedTab.svelte  TopBar.svelte
src/lib/components/entry/: FileEntryBody.svelte  ImageEntryBody.svelte  TextEntryBody.svelte
src/lib/components/views/: CategoriesView.svelte  HomeView.svelte  NoteView.svelte  SettingsView.svelte
src/lib/i18n/: index.ts  types.ts
src/lib/i18n/__tests__/: i18n.test.ts
src/lib/i18n/locales/: en.ts  zh-CN.ts
src/lib/state/: dock.test.ts  dock.ts  window.test.ts  window.ts
src/lib/themes/: engine.ts  layout.ts  presets.ts  token-schema.ts  types.ts
src/lib/themes/__tests__/: engine.test.ts
src/lib/types/: dock.ts
src/lib/utils/: title.ts
