[package]
name = "soma-scratchpad"
version = "0.1.0"
description = "Soma Scratchpad"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "devtools", "image-ico"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
mime_guess = "2"
winreg = "0.52"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
